ver3 index.html

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -55,7 +55,11 @@
   </main>
 
   <!-- ปุ่มเล่นเกม กลางล่าง -->
-  <button id="btnPlay" class="btn-play">เล่นเกม</button>
+  
+  <a href="game.html" class="btn-play" style="display:inline-block;text-decoration:none;
+  padding:10px 14px;border-radius:14px;background:#0fb647;color:#fff;font-weight:800;">
+  เล่นเกม
+</a>
 
   <script>
   (function(){
