--- a/front-end/index.html
+++ b/front-end/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <!-- ปุ่มฐานการเรียนรู้ มุมขวาบน -->
-  <a id="btnTask" href="Extention.html" class="btn-float-right"
+  <a  href="Extention.html" class="btn-float-right"
    style="display:inline-block;text-decoration:none;padding:10px 14px;border-radius:14px;background:#0ea5e9;color:#fff;font-weight:800;">
   ฐานการเรียนรู้
 </a>
