--- a/front-end/index.html
+++ b/front-end/index.html
@@ -56,7 +56,7 @@
 
   <!-- ปุ่มเล่นเกม กลางล่าง -->
   
-  <a href="game.html" class="btn-play" style="display:inline-block;text-decoration:none;
+  <a href="game.html" class="btn-play" style="display:inline-block;text-align:center;text-decoration:none;
   padding:10px 14px;border-radius:14px;background:#0fb647;color:#fff;font-weight:800;">
   เล่นเกม
 </a>
