Ver7 index.html

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -50,7 +50,7 @@
 
     <!-- ปุ่มสามปุ่มตรงกลางใต้ QR -->
     <div class="btns">
-      <center><button id="btnGen">สุ่มคิวอา </button></center>
+      <button id="btnGen">สุ่มคิวอา </button>
       <button id="btnSave" class="btn-good hidden">บันทึกรูปคิวอา</button>
       <button id="btnCopy" class="btn-dark hidden">คัดลอกรหัส</button> 
     </div>
